# leetcode-solutions

./: .clang-format  .gitignore  .golangci.yml  2290.MinimumObstacleRemovaltoReachCorner.ts  README.md  bash.exe.stackdump  bun.lockb  clean.sh  clean.ts  config.sh  config.ts  constant.ts  daily.ts  env.d.ts  env.ts  lint.sh  move.ts  note.txt  package.json  post.ts  problems.ts  pyproject.toml  ray.js  requirements.txt  revision.ts  setup.cfg  setup.sh  social-upload.ts  social.ts  sort.ts  stylecop.json  test.ts  tsconfig.json
c/: .clang-format  .clang-tidy  CMakeLists.txt  compile_commands.json
c/easy/: 1-two-sum.c  1422-maximum-score-after-splitting-a-string.c  1475-final-prices-with-a-special-discount-in-a-shop.c  2185-counting-words-with-a-given-prefix.c
c/hard/: 2272-substring-with-largest-variance.c
c/medium/: 1400-construct-k-palindrome-strings.c  1769-minimum-number-of-operations-to-move-all-balls-to-each-box.c  2-add-two-numbers.c  2116-check-if-a-parentheses-string-can-be-valid.c  2182-construct-string-with-repeat-limit.c  3223-minimum-length-of-string-after-operations.c  916-word-subsets.c
cpp/: CMakeLists.txt
cpp/easy/: 1-two-sum.cpp  1422-maximum-score-after-splitting-a-string.cpp  1475-final-prices-with-a-special-discount-in-a-shop.cpp  2185-counting-words-with-a-given-prefix.cpp
cpp/hard/: 2272-substring-with-largest-variance.cpp
cpp/medium/: 2-add-two-numbers.cpp  2116-check-if-a-parentheses-string-can-be-valid.cpp  2182-construct-string-with-repeat-limit.cpp  3223-minimum-length-of-string-after-operations.cpp  916-word-subsets.cpp
rust/: Cargo.toml  rustfmt.toml
rust/benches/: benchmarks.rs
rust/easy/: 1-two-sum.rs  1422-maximum-score-after-splitting-a-string.rs  1475-final-prices-with-a-special-discount-in-a-shop.rs  2185-counting-words-with-a-given-prefix.rs
rust/hard/: 2272-substring-with-largest-variance.rs
rust/medium/: 2-add-two-numbers.rs  (+6 more)
(+282 files in other folders)
