[package]
name = "leetcode-solutions"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2.0.6"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wingdi"] }

[workspace]
members = [
    "easy/[!images]*",
    "medium/[!images]*",
    "hard/[!images]*"
]

[[bench]]
name = "benchmarks"
harness = false
